drkns 19.05.2018 13:37:59 +0100 - build 5217

1. Приближаем интерфейс самодельного string_view к стандартному. Часть 2 - итераторы.

2. Используем std::string_view (если есть).

3. Не разворачивались метасимволы в заголовке диалога подстановки переменных, вызываемого из user menu.

drkns 18.05.2018 21:42:40 +0100 - build 5216

1. Приближаем интерфейс самодельного string_view к стандартному. Часть 1 - _sv -> sv.

drkns 17.05.2018 21:55:24 +0100 - build 5215

1. Продолжение 5211 - полезли нечётные баги.

2. #0003608: 3.0.5214 x86 - смена атрибутов сбрасывает у ДД.ММ.ГГГГ год в 2000 (а на самом деле 5205).

drkns 16.05.2018 23:07:37 +0100 - build 5214

1. Для группировки цифр в числах используются региональные настройки ОС.

2. Рефакторинг.

drkns 15.05.2018 22:05:12 +0100 - build 5213

1. Еще пара уточнений 5211.

2. Рефакторинг.

drkns 14.05.2018 19:29:57 +0100 - build 5212

1. Уточнение 5211.

drkns 14.05.2018 00:15:53 +0100 - build 5211

1. Рефакторинг. Много изменений в fnparse.cpp, возможны чудеса в обработке метасимволов.

2. В некоторых случаях не учитывалось, что ОС может возвращать для файла пустое короткое имя.
   Теперь вроде бы учитывается везде.

drkns 10.05.2018 23:23:38 +0100 - build 5210

1. 0003606: Задержка результата Ctrl+Q на папке

drkns 07.05.2018 16:51:02 +0100 - build 5209

1. Убираем из headers.hpp то, чего там не должно быть. Часть 3.

2. 0003605: Command 'cd /d' doesn't work in User Menu

zg 06.05.2018 17:39:35 +0300 - build 5208

1. AltF1 F4 Enter - диалог пропал, после перемещения кусора - появляется.

zg 06.05.2018 14:57:28 +0300 - build 5207

1. с форума: Если вызвать диалог Options->File panel modes и перейти, например, на Long descriptions нажав затем Ctrl+Enter то диалог пропадет.

drkns 05.05.2018 17:04:38 +0100 - build 5206

1. Убираем из headers.hpp то, чего там не должно быть. Часть 2.

w17 04.05.2018 15:40:01 +0300 - build 5205

1. с форума: креш при парсинге даты из пробелов, если сепаратор даты тоже пробел.
