@@ -1,3 +1,7 @@
+drkns 19.05.2018 15:06:40 +0100 - build 5218
+
+1. Еще один нечётный баг после 5211.
+
 drkns 19.05.2018 13:37:59 +0100 - build 5217
 
 1. Приближаем интерфейс самодельного string_view к стандартному. Часть 2 - итераторы.
